Add h3 on butter-chicken

--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -6,5 +6,11 @@
 </head>
 <body>
   <h1><u>Butter-Chicken</u></h1>  
+  <h3>Butter chicken, traditionally known as murgh makhani 
+     is an Indian dish originating in Delhi.
+     It is a type of curry made from chicken with a spiced tomato and butter (makhan) sauce. 
+     Its sauce is known for its rich texture. It is similar to chicken tikka masala, 
+     which uses a tomato paste.
+  </h3>
 </body>
 </html>
