img src error fixed on butter-chicken.html

--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1><u>Butter-Chicken</u></h1>  
-  <img src="/images/butter-chicken.jpg" alt="butter chicken image" width="310" height="310">
+  <img src="../images/butter-chicken.jpg" alt="butter chicken image" width="310" height="310">
   <h3>Butter chicken, traditionally known as <em>murgh makhani</em> 
      is an Indian dish originating in Delhi.
      It is a type of curry made from chicken with a spiced tomato and butter (makhan) sauce. 
