--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -13,5 +13,26 @@
      Its sauce is known for its rich texture. It is similar to chicken tikka masala, 
      which uses a tomato paste.
   </h3>
+  <h2>Ingredients</h2>
+  <ul>
+    <li>2 teaspoons garam masala</li>
+    <li>2 teaspoons tandoori masala powder</li>
+    <li>2 teaspoons Madras curry powder</li>
+    <li>1 teaspoon ground cumin</li>
+    <li>½ teaspoon ground cardamom</li>
+    <li>½ teaspoon ground cayenne pepper  </li>
+    <li>salt and ground black pepper to taste</li>
+    <li>1 ½ pounds boneless, skinless chicken thighs, cut into bite-size pieces</li>
+    <li>3 tablespoons butter, divided</li>
+    <li>1 yellow onion, chopped</li>
+    <li>4 cloves garlic, minced</li>
+    <li>1 tablespoon lemon juice</li>
+    <li>2 teaspoons chopped fresh ginger</li>
+    <li>1 cup tomato puree</li>
+    <li>1 cup half-and-half</li>
+    <li>¼ cup plain yogurt</li>
+    <li>⅓ cup cashews</li>
+    <li>1 bunch fresh cilantro, stems removed</li>
+  </ul>
 </body>
 </html>
