--- a/recipes/chana-masala.html
+++ b/recipes/chana-masala.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Chana-Masala</title>
 </head>
 <body>
-    
+    <h1><u>Chana-Masala</u></h1>
+    <img src="../images/butter-chicken.jpg" alt="">
 </body>
 </html>
