--- a/recipes/chana-masala.html
+++ b/recipes/chana-masala.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1><u>Chana-Masala</u></h1>
-    <img src="../images/butter-chicken.jpg" alt="">
+    <img src="../images/chana-masala.jpg" alt="">
 </body>
 </html>
