img size added on chana-masala.html

--- a/recipes/chana-masala.html
+++ b/recipes/chana-masala.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1><u>Chana-Masala</u></h1>
-    <img src="../images/chana-masala.jpg" alt="">
+    <img src="../images/chana-masala.jpg" alt="chana masala images" width="310" height="310">
 </body>
 </html>
