ingredients on chana-masala.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 </head>
 <body>
     <h1><u>Odin Recipes</u></h1>
-    <a href="recipes/butter-chicken.html">Butter-Chicken</a>
+    <h4>what would you like to cook today !</h4>
+    <ul>
+        <li><a href="recipes/butter-chicken.html">Butter-Chicken</a></li>
+        <li><a href="recipes/chana-masala.html">chana-masala</a></li>
+        <li><a href=""></a></li>
+    </ul>
 </body>
 </html>
