--- a/recipes/chana-masala.html
+++ b/recipes/chana-masala.html
@@ -6,6 +6,29 @@
 </head>
 <body>
     <h1><u>Chana-Masala</u></h1>
-    <img src="../images/chana-masala.jpg" alt="chana masala images" width="310" height="310">
+    <img src="../images/chana-masala.jpg" alt="chana masala images" width="410" height="400">
+    <h3>Give this chana masala dish a try and don't look back. Indian food is not just curried sauces. 
+        This spin on an Indian chickpea curry features a healthy mixture of chickpeas, tomatoes, onion, and spices.
+         Both carnivores and vegetarians will enjoy this meal. My kids love it. 
+         Leave out the green chile if the kiddies will be eating. 
+        Serve over basmati or jasmine rice and enjoy. Namaste y'all!</h3>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 onion, chopped</li>
+        <li>1 tomato, chopped</li>
+        <li>1 (1 inch) piece fresh ginger, peeled and chopped</li>
+        <li>4 cloves garlic, chopped, or more to taste</li>
+        <li>1 green chile pepper, seeded and chopped (Optional)</li>
+        <li>3 tablespoons olive oil</li>
+        <li>2 fresh bay leaves</li>
+        <li>1 teaspoon chili powder</li>
+        <li>1 teaspoon coriander powder</li>
+        <li>1 teaspoon garam masala</li>
+        <li>½ teaspoon turmeric powder</li>
+        <li>1 pinch salt to taste</li>
+        <li>water as needed</li>
+        <li>1 (15 ounce) can chickpeas</li>
+        <li>1 teaspoon fresh cilantro leaves, for garnish, or more to taste</li>
+    </ul>
 </body>
 </html>
