chai-tea-latte.html

--- a/recipes/chana-masala.html
+++ b/recipes/chana-masala.html
@@ -6,12 +6,12 @@
 </head>
 <body>
     <h1><u>Chana-Masala</u></h1>
-    <img src="../images/chana-masala.jpg" alt="chana masala images" width="410" height="400">
+    <img src="../images/chana-masala.jpg" alt="chana masala images" width="420" height="410">
     <h3>Give this chana masala dish a try and don't look back. Indian food is not just curried sauces. 
         This spin on an Indian chickpea curry features a healthy mixture of chickpeas, tomatoes, onion, and spices.
          Both carnivores and vegetarians will enjoy this meal. My kids love it. 
          Leave out the green chile if the kiddies will be eating. 
-        Serve over basmati or jasmine rice and enjoy. Namaste y'all!</h3>
+        Serve over basmati or jasmine rice and enjoy. <em>Namaste y'all</em>!</h3>
     <h2>Ingredients</h2>
     <ul>
         <li>1 onion, chopped</li>
@@ -30,5 +30,18 @@
         <li>1 (15 ounce) can chickpeas</li>
         <li>1 teaspoon fresh cilantro leaves, for garnish, or more to taste</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Grind onion, tomato, ginger, garlic, and chile pepper together in a food processor into a paste.</li>
+        <li>Heat olive oil in a large skillet over medium heat. 
+            Fry bay leaves in hot oil until fragrant, about 30 seconds.
+             Pour the paste into the skillet and cook until the oil begins to separate from the mixture and is golden 
+             brown in color, 2 to 3 minutes. Season the mixture with chili powder, coriander,
+              gram masala, turmeric, and salt;
+             cook and stir until very hot, 2 to 3 minutes.</li>
+        <li>Stir enough water into the mixture to get a thick gravy; bring to a boil and stir chickpeas into the gravy.
+             Reduce heat to medium and cook until the chickpeas are heated through, 5 to 7 minutes. 
+            Garnish with cilantro.</li>
+    </ol>
 </body>
 </html>
