link chai-tea-latte.html to index.html

--- a/recipes/chai-tea-latte.html
+++ b/recipes/chai-tea-latte.html
@@ -5,6 +5,7 @@
     <title>chai-tea-latte</title>
 </head>
 <body>
-    <h1><u>Chana-Masala</u></h1>
+    <h1><u>Chai-Tea_latte</u></h1>
+    <img src="../images/chai-tea-latte.jpg" alt="Chai Tea latte image">
 </body>
 </html>
