--- a/recipes/chai-tea-latte.html
+++ b/recipes/chai-tea-latte.html
@@ -6,6 +6,18 @@
 </head>
 <body>
     <h1><u>Chai-Tea_latte</u></h1>
-    <img src="../images/chai-tea-latte.jpg" alt="Chai Tea latte image">
+    <img src="../images/chai-tea-latte.jpg" alt="Chai Tea latte image" width="350" height="340">
+    <h3>This <em>milky chai tea latte</em> is really similar to the brand Oregon Chai.
+         Simply delicious either hot or iced! This will save you more money than buying the chai. 
+        In India, each family has their own way of making it, 
+        so you should experiment to find your favorite blend.</h3>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>¾ cup boiling water</li>
+        <li>1 chai tea bag</li>
+        <li>1 ½ teaspoons honey</li>
+        <li>1 teaspoon white sugar</li>
+        <li>¾ cup milk</li>
+    </ul>
 </body>
 </html>
