--- a/recipes/chai-tea-latte.html
+++ b/recipes/chai-tea-latte.html
@@ -19,5 +19,11 @@
         <li>1 teaspoon white sugar</li>
         <li>¾ cup milk</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Gather all ingredients.</li>
+        <li>Pour boiling water over chai tea bag in a mug; let steep 4 to 6 minutes. Remove and discard tea bag.</li>
+        <li>Stir honey and sugar into tea to dissolve. Stir milk through tea to serve.</li>
+    </ol>
 </body>
 </html>
