chai-tea-latte.jpg

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <h1><u>Odin Recipes</u></h1>
     <h4>what would you like to cook today !</h4>
     <ul>
-        <li><a href="recipes/butter-chicken.html">Butter-Chicken</a></li>
-        <li><a href="recipes/chana-masala.html">chana-masala</a></li>
-        <li><a href=""></a></li>
+        <li><h3><a href="recipes/butter-chicken.html">Butter-Chicken</a></h3></li>
+        <li><h3><a href="recipes/chana-masala.html">chana-masala</a></h3></li>
+        <li><h3><a href="recipes/chai-tea-latte.html">Chai-Tea-Latte</a></h3></li>
     </ul>
 </body>
 </html>
