--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1><u>Odin Recipes</u></h1>
-    <h4>what would you like to cook today !</h4>
+    <h1 class="title"><u>Odin Recipes</u></h1>
+    <h4 class="q">what would you like to cook today !</h4>
     <ul>
         <li><h3><a href="recipes/butter-chicken.html">Butter-Chicken</a></h3></li>
         <li><h3><a href="recipes/chana-masala.html">chana-masala</a></h3></li>
