--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h1 class="title"><u>Odin Recipes</u></h1>
     <h4 class="q">what would you like to cook today !</h4>
     <ul>
-        <li><h3><a href="recipes/butter-chicken.html">Butter-Chicken</a></h3></li>
-        <li><h3><a href="recipes/chana-masala.html">chana-masala</a></h3></li>
-        <li><h3><a href="recipes/chai-tea-latte.html">Chai-Tea-Latte</a></h3></li>
+        <li class="l"><h3><a href="recipes/butter-chicken.html">Butter-Chicken</a></h3></li>
+        <li class="l"><h3><a href="recipes/chana-masala.html">chana-masala</a></h3></li>
+        <li class="l"><h3><a href="recipes/chai-tea-latte.html">Chai-Tea-Latte</a></h3></li>
     </ul>
 </body>
 </html>
